Replace 960. Added lister port to variable. Changed DB name in Mongo.

--- a/client/views/page.html
+++ b/client/views/page.html
@@ -7,10 +7,10 @@
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.js"></script>
     <link rel="stylesheet" href="/public/css/bootstrap.css">
-    <link rel="stylesheet" href="/assets/css/reset.css" />
-    <link rel="stylesheet" href="/assets/css/text.css" />
-    <link rel="stylesheet" href="/assets/css/960.css" />
-    <!--<link rel="stylesheet" href="/assets/css/demo.css" />-->
+    <link rel="stylesheet" href="/assets/css/960/reset.css" />
+    <link rel="stylesheet" href="/assets/css/960/text.css" />
+    <link rel="stylesheet" href="/assets/css/960/960.css" />
+    <!--<link rel="stylesheet" href="/assets/css/960/demo.css" />-->
     <script src="/assets/js/action.js"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/custom.css" />
