--- a/client/views/page.html
+++ b/client/views/page.html
@@ -88,14 +88,16 @@
                             <input type="number" class="form-control" id="default_value" name="default_value" value="5">
                         </div>
                     </div>
-                    <div class="form-group btn-center">
-                        <div class="btn-group" role="group">
+                    <div class="form-group btn-center pull-right row">
+                        <div class="col-md-3" role="group">
                             <button type="button" class="btn btn-primary function-report-button">Reports</button>
                         </div>
-                        <div class="btn-group" role="group">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-3" role="group">
                             <button type="button" class="btn btn-success function-add-button">Save</button>
                         </div>
-                        <div class="btn-group" role="group">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-3" role="group">
                             <button type="button" class="btn btn-danger function-cancel-button">Cancel</button>
                         </div>
                     </div>
