--- a/client/public/css/custom.css
+++ b/client/public/css/custom.css
@@ -61,9 +61,10 @@ body {
     text-align: center;
 }
 
-.list-group-item.active {
-    background: #C9DE9B;
-    color: black;
+.list-group-item.active,
+.list-group-item.active:focus {
+    background: #337ab7;
+    color: white;
     border-color: transparent;
 }
 
