--- a/client/views/functions.html
+++ b/client/views/functions.html
@@ -21,7 +21,7 @@
 <div class="container_12">
     <div class="grid_4">
         <div class="logo">
-            Logo
+            Version: {{ version }}
         </div>
     </div>
     <div class="grid_5">
