--- a/client/views/licenses.html
+++ b/client/views/licenses.html
@@ -22,7 +22,7 @@
 <div class="container_12">
     <div class="grid_4">
         <div class="logo">
-            Logo
+            Version: {{ version }}
         </div>
     </div>
     <div class="grid_5">
