--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,22 +2,22 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Node chat</title>
+    <title>License management tool</title>
     <script src="/public/js/jquery.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
-    {% if not error %}
-        <script src='/socket.io/socket.io.js'></script>
-    {% endif %}
 </head>
 <body>
     {% if error %}
-        <!--<h3 class="error"> {{ error }} </h3>-->
+        <h3 class="error"> {{ error }} </h3>
         <div class="login-page">
             <div class="form">
                 <div style="margin-top: 18px;">
                     <form class="register" method="post" style="display: none;">
                         <input type="text" name="username" placeholder="username"/>
                         <input type="password" name="password" placeholder="password"/>
+                        <input type="phone" name="phone" placeholder="phone"/>
+                        <input type="address" name="address" placeholder="address"/>
+                        <input type="email" name="email" placeholder="email"/>
                         <button type="submit">create</button>
                         <p class="message">Already registered? <a href="#">Sign In</a></p>
                     </form>
@@ -32,29 +32,9 @@
         </div>
         <script src="/assets/js/unauth.js"></script>
     {% else %}
-        <div class="container clearfix">
-            <div class="chat">
-                <div class="chat-header clearfix">
-                    <div class="chat-about">
-                        <div class="chat-num-users">Hello, <span id="name">{{ username }}</span></div>
-                    </div>
-                    <div class="controls">
-                        <a href="#" class="logout-btn">Logout</a>
-                    </div>
-                </div>
-
-                <div class="chat-history">
-                    <ul>
-                    </ul>
-                </div>
-
-                <div class="chat-message clearfix">
-                    <textarea name="message" placeholder ="Type your message" rows="3"></textarea>
-                    <button type="submit">Send</button>
-                </div>
-            </div>
-        </div>
-        <script src="/assets/js/auth.js"></script>
+        <script>
+            window.location.replace("/functions");
+        </script>
     {% endif %}
 </body>
 </html>
