--- a/client/public/css/custom.css
+++ b/client/public/css/custom.css
@@ -27,20 +27,22 @@
 
 body {
     /*background: gainsboro;*/
-    background: rgba(161,156,224,1);
-    background: -moz-linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);
-    background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(161,156,224,1)), color-stop(28%, rgba(158,222,155,1)), color-stop(54%, rgba(161,156,224,1)), color-stop(79%, rgba(201,222,155,1)), color-stop(100%, rgba(217,209,240,1)));
-    background: -webkit-linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);
-    background: -o-linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);
-    background: -ms-linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);
-    background: linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a19ce0', endColorstr='#d9d1f0', GradientType=1 );
+    background: #93B0B7;
+    /*background: rgba(161,156,224,1);*/
+    /*background: -moz-linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);*/
+    /*background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(161,156,224,1)), color-stop(28%, rgba(158,222,155,1)), color-stop(54%, rgba(161,156,224,1)), color-stop(79%, rgba(201,222,155,1)), color-stop(100%, rgba(217,209,240,1)));*/
+    /*background: -webkit-linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);*/
+    /*background: -o-linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);*/
+    /*background: -ms-linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);*/
+    /*background: linear-gradient(45deg, rgba(161,156,224,1) 0%, rgba(158,222,155,1) 28%, rgba(161,156,224,1) 54%, rgba(201,222,155,1) 79%, rgba(217,209,240,1) 100%);*/
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a19ce0', endColorstr='#d9d1f0', GradientType=1 );*/
 }
 
 .list-name {
     text-align: center;
     padding: 15px;
     margin-bottom: 0;
+    font-weight: bold;
 }
 
 .function-title {
@@ -48,9 +50,11 @@ body {
     padding: 15px;
     margin-bottom: 0;
     font-size: 21px;
+    font-weight: bold;
 }
 .global-menu-item {
     margin-bottom: 0;
+    font-weight: bold;
 }
 
 .btn {
@@ -69,9 +73,21 @@ body {
 }
 
 .payment-form {
-    background: #C9DE9B;
+    background: #dfe8f6;
 }
 
 .list-group-item {
-    background: #C9DE9B;
+    background: #dfe8f6;
+}
+
+.panel-default {
+    border-color: black;
+    border-width: 2px;
+}
+
+.form-control {
+    border-color: black;
+    border-width: 1px;
+    font-size: 16px;
+
 }
