--- a/client/views/customers.html
+++ b/client/views/customers.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="/assets/css/960/reset.css" />
     <link rel="stylesheet" href="/assets/css/960/text.css" />
     <link rel="stylesheet" href="/assets/css/960/960.css" />
+
+    <script src="/public/js/flatpickr.js"></script>
+    <link rel="stylesheet" href="/public/css/flatpickr.min.css">
+
     <script src="/assets/js/common.js"></script>
     <!--<link rel="stylesheet" href="/assets/css/960/demo.css" />-->
     <script src="/assets/js/customers.js"></script>
@@ -75,6 +79,12 @@
                         <label for="description" class="col-sm-3 control-label">Description</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="description" name="description">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-3 control-label">E-mail</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="email" name="email" placeholder="Select Date..">
                         </div>
                     </div>
                     <div class="form-group btn-center pull-right row">
