--- a/client/public/css/custom.css
+++ b/client/public/css/custom.css
@@ -91,3 +91,13 @@ body {
     font-size: 16px;
 
 }
+
+.btn-filter {
+    width: 25%;
+    margin-left: 0px !important;
+}
+.btn-filter-group {
+    width: 100%;
+    vertical-align: baseline;
+    margin-left: 0px;
+}
