--- a/client/views/licenses.html
+++ b/client/views/licenses.html
@@ -32,7 +32,7 @@
     </div>
     <div class="grid_2">
         <div class="user-login-name">
-            Dear, <span id="name">{{ username }}</span>
+            Dear, <span id="user-login-name">{{ username }}</span>
         </div>
     </div>
     <div class="grid_1">
