Changed style for login page. Removed non-used css styles. Added ADD button in Function and Customers tabs (without background). Moved header to a separate file. Changed title to "name" field from package.json

--- a/client/public/css/custom.css
+++ b/client/public/css/custom.css
@@ -101,3 +101,7 @@ body {
     vertical-align: baseline;
     margin-left: 0px;
 }
+.btn-add-item {
+    width: 100%;
+    margin-left: 0px !important;
+}
