--- a/client/public/css/custom.css
+++ b/client/public/css/custom.css
@@ -105,3 +105,13 @@ body {
     width: 100%;
     margin-left: 0px !important;
 }
+[itemprop="name"] {
+    position: absolute;
+    width: 75%;
+}
+[itemprop="customer_code"] {
+
+}
+[itemprop="id"] {
+    float: right;
+}
