Added actions for Trash button. Added different for lables for customers. Fixed refresh a customer tab (now list reload locally).

--- a/client/public/css/custom.css
+++ b/client/public/css/custom.css
@@ -110,8 +110,8 @@ body {
     width: 75%;
 }
 [itemprop="customer_code"] {
-
+    float: right;
 }
 [itemprop="id"] {
-    float: right;
+    font-size: 8px;
 }
