--- a/client/views/customers.html
+++ b/client/views/customers.html
@@ -69,9 +69,9 @@
         </div>
     </div>
     <div class="grid_8">
-        <div class="alert alert-success" role="alert">
-            alert
-        </div>
+        <!--<div class="alert alert-success" role="alert">-->
+            <!--alert-->
+        <!--</div>-->
         <div class="function-title">Customer settings: </div>
         <div class="function-settings" id="function-settings">
             <div class="panel panel-default">
