--- a/client/views/customers.html
+++ b/client/views/customers.html
@@ -41,6 +41,12 @@
             <button type="button" class="btn btn-filter btn-primary">Expired</button>
             <button type="button" class="btn btn-filter btn-primary">Trash</button>
         </div>
+        <div class="input-group search-group">
+            <input type="text" class="form-control search-field" placeholder="Search...">
+            <span class="input-group-btn">
+            <button class="btn btn-default search-clear" type="button">Clear</button>
+            </span>
+        </div>
         <div class="list-group" id="customers-list"></div>
         <button type="button" class="btn btn-warning btn-add-item add-new-item-button">Add</button>
 
