--- a/client/views/header.html
+++ b/client/views/header.html
@@ -19,3 +19,22 @@
     </div>
 </div>
 <div class="clear"></div>
+
+<script>
+    $(".logout-btn").on('click', e => {
+        console.log('logout');
+        e.preventDefault();
+        $.ajax({
+            url: '/logout',
+            type: 'POST',
+            data: {},
+            success: (res) => {
+                window.location.replace("/");
+                location.reload();
+            },
+            error: (res) => {
+                console.error(res);
+            }
+        });
+    });
+</script>
