--- a/client/views/system.html
+++ b/client/views/system.html
@@ -23,7 +23,7 @@
     <div data-include="header"></div>
     <div data-include="menu"></div>
 
-{% if (roles != 'ADMIN') %}
+{% if (roles == 'GUEST') %}
     <br><br>
     <div class="grid_12">
         <h1 align="center">
@@ -41,6 +41,11 @@
             <a href="#" class="list-group-item" id="system-password">
                 <h5 class="global-menu-item">Change password</h5>
             </a>
+            {% if (roles == 'ADMIN') %}
+            <a href="#" class="list-group-item" id="system-list-users">
+                <h5 class="global-menu-item">List of users</h5>
+            </a>
+            {% endif %}
         </div>
     </div>
     <div class="grid_8">
