--- a/client/views/licenses.html
+++ b/client/views/licenses.html
@@ -24,7 +24,7 @@
     <div data-include="header"></div>
     <div data-include="menu"></div>
 
-{% if (roles != 'ADMIN') %}
+{% if (roles == 'GUEST') %}
     <br><br>
     <div class="grid_12">
         <h1 align="center">
@@ -32,7 +32,48 @@
             Please contact the Administrator.
         </h1>
     </div>
-{% endif %}
+{% else %}
+
+    <div class="grid_4">
+        <h3 class="list-name">List of licenses:</h3>
+        <div class="btn-group btn-filter-group">
+            <button type="button" class="btn btn-filter btn-success">New</button>
+            <button type="button" class="btn btn-filter btn-primary">Active</button>
+            <button type="button" class="btn btn-filter btn-warning">Expired</button>
+            <button type="button" class="btn btn-filter btn-danger">Trash</button>
+        </div>
+        <div class="input-group search-group">
+            <input type="text" class="form-control search-field" placeholder="Search...">
+            <span class="input-group-btn">
+            <button class="btn btn-default search-clear" type="button">Clear</button>
+            </span>
+        </div>
+        <div class="list-group" id="licenses-list"></div>
+        <button type="button" class="btn btn-warning btn-add-item add-new-item-button">Add</button>
+        <ul class="pagination justify-content-center">
+            <li class="disabled">
+                  <span>
+                    <span aria-hidden="true">&laquo;</span>
+                  </span>
+            </li>
+            <li class="active">
+                <span>1 <span class="sr-only">(current)</span></span>
+            </li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+                <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+
+    </div>
+
+
+    {% endif %}
 
 </div>
 </body>
