--- a/client/views/customers.html
+++ b/client/views/customers.html
@@ -34,12 +34,11 @@
     {% else %}
 
     <div class="grid_4">
-        <h3 class="list-name">List of customers:</h3>
         <div class="btn-group btn-filter-group">
-            <button type="button" class="btn btn-filter btn-success">New</button>
-            <button type="button" class="btn btn-filter btn-primary">Active</button>
-            <button type="button" class="btn btn-filter btn-warning">Expired</button>
-            <button type="button" class="btn btn-filter btn-danger">Trash</button>
+            <button type="button" class="btn btn-filter btn-success" title="The customers were created not more seven days ago">New</button>
+            <button type="button" class="btn btn-filter btn-primary" title="The customers with created licenses.">Active</button>
+            <button type="button" class="btn btn-filter btn-warning" title="The customers without a licenses.">Empty</button>
+            <button type="button" class="btn btn-filter btn-danger" title="The customers who have been moved to a trash.">Trash</button>
         </div>
         <div class="input-group search-group">
             <input type="text" class="form-control search-field" placeholder="Search...">
@@ -74,7 +73,6 @@
         <!--<div class="alert alert-success" role="alert">-->
             <!--alert-->
         <!--</div>-->
-        <div class="function-title">Customer settings: </div>
         <div class="function-settings" id="function-settings">
             <div class="panel panel-default">
                 <div class="panel-body form-horizontal payment-form">
