Added bootstrap-table to project. Added data for users grid. Implemented search by name for users.

--- a/client/views/system.html
+++ b/client/views/system.html
@@ -6,11 +6,13 @@
 
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.js"></script>
+    <script src="/public/js/bootstrap-table.js"></script>
     <script src="/assets/js/common.js"></script>
     <script src="/assets/js/system.js"></script>
     <script src="/public/js/jquery.cookie.js"></script>
 
     <link rel="stylesheet" href="/public/css/bootstrap.css">
+    <link rel="stylesheet" href="/public/css/bootstrap-table.css">
     <link rel="stylesheet" href="/assets/css/960/reset.css" />
     <link rel="stylesheet" href="/assets/css/960/text.css" />
     <link rel="stylesheet" href="/assets/css/960/960.css" />
