--- a/client/views/customers.html
+++ b/client/views/customers.html
@@ -35,10 +35,10 @@
 
     <div class="grid_4">
         <div class="btn-group btn-filter-group">
-            <button type="button" class="btn btn-filter btn-success" title="The customers were created not more seven days ago">New</button>
-            <button type="button" class="btn btn-filter btn-primary" title="The customers with created licenses.">Active</button>
-            <button type="button" class="btn btn-filter btn-warning" title="The customers without a licenses.">Empty</button>
-            <button type="button" class="btn btn-filter btn-danger" title="The customers who have been moved to a trash.">Trash</button>
+            <button type="button" class="btn btn-filter btn-success btn-filter-new" title="The customers were created not more seven days ago">New</button>
+            <button type="button" class="btn btn-filter btn-primary btn-filter-active" title="The customers with created licenses.">Active</button>
+            <button type="button" class="btn btn-filter btn-warning btn-filter-without" title="The customers without a licenses.">Empty</button>
+            <button type="button" class="btn btn-filter btn-danger btn-filter-trash" title="The customers who have been moved to a trash.">Trash</button>
         </div>
         <div class="input-group search-group">
             <input type="text" class="form-control search-field" placeholder="Search...">
