Implemented new query for getting customers. Implemented all filters for customers.

--- a/client/public/css/custom.css
+++ b/client/public/css/custom.css
@@ -152,4 +152,9 @@ body {
 
 .btn:active, .btn.active {
     font-weight: bold;
+    /*opacity: 1;*/
+}
+
+[class^='btn-filter-'], [class*=' btn-filter-'] {
+    /*opacity: 0.6;*/
 }
