--- a/client/views/customers.html
+++ b/client/views/customers.html
@@ -34,7 +34,7 @@
     {% else %}
 
     <div class="grid_4">
-        <div class="btn-group btn-filter-group">
+        <div class="btn-group btn-filter-group btn-filters-group">
             <button type="button" class="btn btn-filter btn-success btn-filter-new" title="The customers were created not more seven days ago">New</button>
             <button type="button" class="btn btn-filter btn-primary btn-filter-active" title="The customers with created licenses.">Active</button>
             <button type="button" class="btn btn-filter btn-warning btn-filter-without" title="The customers without a licenses.">Empty</button>
