--- a/client/public/css/custom.css
+++ b/client/public/css/custom.css
@@ -158,3 +158,7 @@ body {
 [class^='btn-filter-'], [class*=' btn-filter-'] {
     /*opacity: 0.6;*/
 }
+
+.current-item {
+    background: lightsteelblue;
+}
